# forum-participant-navigator

./: .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: db.py
app/models/: __init__.py
config/: tag_rules.yaml
migrations/: env.py
migrations/versions/: 202607140001_initial_schema.py
scraper/: __init__.py  __main__.py  cli.py  config.py  discovery.py  fetcher.py  normalizer.py  reporter.py  repository.py  resolver.py  schemas.py  tagger.py
scraper/parsers/: event_speakers.py  speaker_list.py  speaker_profile.py
tests/: test_cli.py  test_discovery.py  test_fetcher.py  test_import_pipeline.py  test_normalizer.py  test_speaker_parser.py
tests/fixtures/: speaker_list.html  speaker_profile.html  speaker_profile_updated.html
