[project]
name = "forum-participant-navigator"
version = "0.2.0"
description = "Source-aware parser for public Roscongress participants."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "psycopg[binary]>=3.1",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "respx>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*", "scraper*"]
exclude = ["config*", "data*", "migrations*", "tests*"]
